force-app/main/default/objects/PaymentTerm__c/PaymentTerm__c.object-meta.xml
<CustomObject>
    <label>Condição de Pagamento</label>
    <nameField>
        <label>Condição de Pagamento</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Condições de Pagamento</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>