force-app/main/default/objects/PaymentTerm__c/fields/AverageTermNmb__c.field-meta.xml
<CustomField>
    <fullName>AverageTermNmb__c</fullName>
    <description>Prazo médio da condição</description>
    <label>Prazo Médio</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>