force-app/main/default/objects/PaymentTerm__c/fields/CustomizedIdTxt__c.field-meta.xml
<CustomField>
    <fullName>CustomizedIdTxt__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Código da Condição de Pagamento</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>