force-app/main/default/objects/PaymentTerm__c/fields/InstallmentsNmb__c.field-meta.xml
<CustomField>
    <fullName>InstallmentsNmb__c</fullName>
    <label>Número de Parcelas</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>