force-app/main/default/objects/PaymentTerm__c/fields/IsActiveBln__c.field-meta.xml
<CustomField>
    <fullName>IsActiveBln__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Ativo</label>
    <type>Checkbox</type>
</CustomField>