force-app/main/default/objects/PaymentTerm__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>CustomizedIdTxt__c</columns>
    <columns>NAME</columns>
    <columns>AverageTermNmb__c</columns>
    <columns>InstallmentsNmb__c</columns>
    <columns>IsActiveBln__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tudo</label>
</ListView>